--- a/packages/recomponents/src/styles/recomm.scss
+++ b/packages/recomponents/src/styles/recomm.scss
@@ -16,6 +16,10 @@
     --font-weight-medium: 500;
     --font-weight-semi-bold: 600;
     --font-weight-bold: 700;
+    --font-weight-h1: 500;
+    --font-weight-h2: 400;
+    --font-weight-h3: 400;
+    --font-weight-h4: 400;
 
     // Font Sizes
     --font-size-h1: 2.8rem;
