--- a/packages/recomponents/src/components/r-input/r-input.scss
+++ b/packages/recomponents/src/components/r-input/r-input.scss
@@ -32,9 +32,10 @@
     line-height: var(--input-line-height);
     transition: var(--input-transition);
     outline: none;
+    background-color: var(--input-background-color);
 
     &:focus {
-        box-shadow: inset 0 0 0 2px var(--primary-color);
+        box-shadow: var(--input-focus-box-shadow);
     }
 }
 
