fix(r-loader): support spinner mode of loader

--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -342,6 +342,7 @@ body, .article {
     --loader-z-index-fullscreen: var(--z-index-801);
     --loader-wrapper-color: #A1B2C1;
     --loader-border-radius: var(--border-radius);
+    --loader-spinner-color: #18222e;
 
     // Tiles
     // ------------------------------------------------
