--- a/packages/recomponents/src/components/r-loader/r-loader.scss
+++ b/packages/recomponents/src/components/r-loader/r-loader.scss
@@ -72,6 +72,25 @@
                 animation: r-mr-ly-animation 1s .4s infinite;
             }
         }
+
+        .r-loader-spinner-wrapper {
+            display: block;
+            position: relative;
+            width: 36px;
+            height: 36px;
+            text-align: center;
+            background-clip: padding-box;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            .r-icon {
+                width: 36px;
+                height: 36px;
+                fill: var(--loader-spinner-color);
+                animation: rotating 1s linear infinite;
+            }
+        }
     }
 
     &.r-is-fullscreen {
@@ -141,5 +160,14 @@
     }
     100% {
         height: 20px;
+    }
+}
+
+@keyframes rotating {
+    from{
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        -webkit-transform: rotate(360deg);
     }
 }
