fix(r-popper): fix menu padding style

--- a/packages/recomponents/src/components/r-popper/r-popper.scss
+++ b/packages/recomponents/src/components/r-popper/r-popper.scss
@@ -163,6 +163,7 @@
 
 .r-popover-content.r-popover-menu::-webkit-scrollbar {
     display: none;
+    padding: var(--popover-content-menu-padding);
 }
 
 .r-popover-action-menu-item,
