chore(styles): Remove prefixes from animation

--- a/packages/recomponents/src/components/r-loader/r-loader.scss
+++ b/packages/recomponents/src/components/r-loader/r-loader.scss
@@ -165,9 +165,9 @@
 
 @keyframes rotating {
     from{
-        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
     }
     to{
-        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 }
