fix(component): Fix text content of date range

--- a/packages/recomponents/src/components/r-date-range/r-date-range.scss
+++ b/packages/recomponents/src/components/r-date-range/r-date-range.scss
@@ -18,3 +18,9 @@
 .r-date-range .r-button-type-default:focus {
     box-shadow: var(--button-default-box-shadow);
 }
+
+.r-range-picker-item {
+    max-width: 500px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
