--- a/packages/recomponents/src/styles/theme.scss
+++ b/packages/recomponents/src/styles/theme.scss
@@ -415,6 +415,11 @@ body, .article {
     --select-wrapper-z-index: 50;
     --select-z-index: 50;
 
+    // Grid
+    // -----------------------------------------------------
+    --grid-background-color: var(--mono-color-0);
+
+
     // Tabs
     // -----------------------------------------------------
 
