--- a/packages/recomponents/src/components/r-grid/r-grid.scss
+++ b/packages/recomponents/src/components/r-grid/r-grid.scss
@@ -4,12 +4,25 @@
     background-color: var(--grid-background-color);
 }
 
+.r-grid-body {
+    overflow: scroll
+}
+
+.r-repeater-cell-badge {
+    padding: var(--space-xs) !important;
+}
+
 .r-repeater-with-frozen-column {
     overflow-x: scroll;
-    margin-left: 225px !important;
+    min-width: 400px;
+    padding-left: 245px !important;
 
     th {
         height: 60px;
+    }
+
+    td {
+        white-space: nowrap;
     }
 
     td.r-repeater-cell-frozen,
