--- a/packages/recomponents/src/styles/helpers.scss
+++ b/packages/recomponents/src/styles/helpers.scss
@@ -82,3 +82,10 @@ $directions: (
 .r-position-absolute {
     position: absolute !important;
 }
+
+.capitalize-first-letter {
+    display: inline-block;
+    &:first-letter {
+        text-transform: uppercase;
+    }
+}
