--- a/packages/recomponents/src/styles/helpers.scss
+++ b/packages/recomponents/src/styles/helpers.scss
@@ -83,7 +83,7 @@ $directions: (
     position: absolute !important;
 }
 
-.capitalize-first-letter {
+.r-capitalize-first-letter {
     display: inline-block;
     &:first-letter {
         text-transform: uppercase;
