fix(r-month-picker): calendar columns options

--- a/packages/recomponents/src/components/r-date-range/r-date-range.scss
+++ b/packages/recomponents/src/components/r-date-range/r-date-range.scss
@@ -2,8 +2,8 @@
     margin-right: 3.2rem;
 }
 
-.r-date-range-calendar.r-popover {
-    min-width: 513px;
+.r-date-range-button {
+    white-space: nowrap;
 }
 
 .r-date-range-preset-picker .r-popover {
