--- a/packages/recomponents/src/components/r-date-input/r-date-input.scss
+++ b/packages/recomponents/src/components/r-date-input/r-date-input.scss
@@ -98,6 +98,10 @@
     border-radius: 50% !important;
 }
 
+.vc-popover-content-wrapper {
+    z-index: var(--z-index-1000);
+}
+
 //Calendar
 .calendar .popover-container {
     display: block;
