fix(r-date-input): add placement prop and a fallback placement

--- a/packages/recomponents/src/components/r-date-input/r-date-input.scss
+++ b/packages/recomponents/src/components/r-date-input/r-date-input.scss
@@ -99,7 +99,7 @@
 }
 
 .vc-popover-content-wrapper {
-    z-index: var(--z-index-1000);
+    z-index: var(--z-index-1000) !important;
 }
 
 //Calendar
