--- a/packages/recomponents/src/styles/recomm.scss
+++ b/packages/recomponents/src/styles/recomm.scss
@@ -164,6 +164,7 @@
         url('/static/fonts/Roboto-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -175,6 +176,7 @@
         url('/static/fonts/Roboto-BoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -186,6 +188,7 @@
         url('/static/fonts/Roboto-Italic.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -197,6 +200,7 @@
         url('/static/fonts/Roboto-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -208,6 +212,7 @@
         url('/static/fonts/Roboto-MediumItalic.ttf') format('truetype');
     font-weight: 500;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -219,6 +224,7 @@
         url('/static/fonts/Roboto-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 //Montserrat
@@ -231,6 +237,7 @@
         url('/static/fonts/Montserrat-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -242,6 +249,7 @@
         url('/static/fonts/Montserrat-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -253,6 +261,7 @@
         url('/static/fonts/Montserrat-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -264,6 +273,7 @@
         url('/static/fonts/Montserrat-SemiBold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -275,6 +285,7 @@
         url('/static/fonts/Montserrat-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 //Roboto Mono
@@ -287,6 +298,7 @@
         url('/static/fonts/RobotoMono-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -298,6 +310,7 @@
         url('/static/fonts/RobotoMono-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -309,5 +322,6 @@
         url('/static/fonts/RobotoMono-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
